Try to fix nav-bar on mobile

--- a/frontend/index/index.css
+++ b/frontend/index/index.css
@@ -84,6 +84,10 @@ ul li ul {
     border-radius: 12px;
 }
 
+.no-bottom-margin {
+    margin-bottom: 0 !important;
+}
+
 /*********************************************************************************************************************/
 
 #hero-page {
